added carrousel animation

--- a/index.html
+++ b/index.html
@@ -96,20 +96,7 @@
         <section id="home" class="wow fadeIn" style="background-color: #2F4B5E; padding: 0px;">
             <div class="container" style="width: 100%;">
                 <div class="row position-relative">
-                    <!-- <div class="wpb_wrapper">
-                    <div
-                      id="pofo-image-slider-1"
-                      class="swiper-container height-100 width-100 pofo-image-style8 pofo-image-slider-1 white-move pofo-slider8 pofo-slider8-1 swiper-container-horizontal"
-                    >
-                      <div
-                        class="swiper-wrapper"
-                        style="
-                          transform: translate3d(-1440px, 0px, 0px);
-                          transition-duration: 0ms;
-                          style="transform: translate3d(-1440px, 0px, 0px); transition-duration: 0ms;"
-                        "
-                      > -->
-                    <div class="swiper-slider-third swiper-pagination-bottom swiper-container black-move text-center testimonial-style2  sm-padding-50px-bottom xs-sm-padding-30px-bottom wow fadeIn">
+                    <div class="swiper-three-slides swiper-slider-third swiper-pagination-bottom swiper-container black-move text-center testimonial-style2  sm-padding-50px-bottom xs-sm-padding-30px-bottom wow fadeIn">
                         <div class="swiper-wrapper" style="margin: 0px!important;">
                             <!-- start testimonial item -->
                             <div
@@ -213,7 +200,7 @@
                             </div>
                           </div>
                         </div>
-                       <div class="swiper-pagination swiper-pagination-third"></div>
+                       <div class="swiper-pagination swiper-three-slides"></div>
                         <div class="swiper-button-next slider-long-arrow-white display-none"></div>
                         <div class="swiper-button-prev slider-long-arrow-white display-none"></div>
                     </div>
@@ -435,7 +422,15 @@
         <!-- end clients section -->
     </section>
     <!-- start form style 03 section -->
-    <section id="contact" class="wow fadeIn bg-light-gray">
+    <section id="contact" class="wow fadeIn bg-light-gray" style="background-color: #626f80;">
+            <div class="opacity-extra-medium bg-black"></div>
+            <div class="container-fluid padding-thirteen-lr md-padding-six-lr position-relative xs-padding-15px-lr">
+                <div class="row">
+                    <div class="col-lg-6 col-md-8 col-sm-12 text-center center-col">
+                        <h4 class="text-white alt-font font-weight-300 xs-margin-5px-bottom">Contactanos</h4>
+                    </div>
+                </div>    
+            </div>
         <div class="container">
             <form id="contact-form-3" action="javascript:void(0)" method="post">
                 <div class="row"> 
@@ -456,7 +451,7 @@
             </form>
         </div>     
     </section>
-        <section class="wow fadeIn">
+        <section class="wow fadeIn bg-light-gray">
             <div class="container" >
                 <div class="row sm-col-2-nth center" style="display: flex; flex-direction: row; justify-content: center; flex-wrap: wrap;">
                     <!-- start contact item -->
@@ -483,9 +478,9 @@
       </section>
         <!-- end contact section -->
         <!-- start footer --> 
-        <footer class="footer-strip-dark bg-black padding-50px-tb xs-padding-30px-tb">
+        <footer class="footer-strip-dark bg-black padding-50px-tb xs-padding-30px-tb" style="background-color: white;">
             <div class="container">
-                <div class="row equalize xs-equalize-auto" style="display: flex; flex-direction: row; align-items: center;">
+                <div class="row equalize xs-equalize-auto" style="display: flex; flex-direction: row; align-items: baseline;">
                     <!-- start logo -->
                     <div class="col-md-3 col-sm-3 col-xs-12 display-table sm-text-center xs-margin-20px-bottom">
                         <div class="display-table-cell vertical-align-middle">
