--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <!-- keywords -->
         <meta name="keywords" content="creative, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, agency, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, personal, masonry, grid, coming soon, faq">
         <!-- favicon -->
-        <link rel="shortcut icon" href="./images/ibizok-logo/ibi-trans.png">
-        <link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+        <link rel="icon" type="image/png" href="./images/ibizok-logos/favicon.png" />
+        <link rel="shortcut icon" href="./images/ibizok-logos/favicon.png">
+        <link rel="apple-touch-icon" href="./images/ibizok-logos/favicon.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./images/ibizok-logos/favicon.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./images/ibizok-logos/favicon.png">
         <!-- animation -->
         <link rel="stylesheet" href="css/animate.css" />
         <!-- bootstrap -->
@@ -57,7 +58,7 @@
                     <div class="row" style="height: 10rem!important;">
                         <div class="col-md-2 col-xs-5">
                             <a href="index.html" title="" class="logo">
-                                <img src="./images/ibizok-logos/logoibizokabajo.png" data-rjs="./images/ibizok-logos/logoibizokabajo.png" class="logo-dark" alt="Pofo" style="margin-top: 2rem; max-height: 18rem!important; margin-left: 1.5rem;">
+                                <img src="./images/ibizok-logos/logoibizokabajo.png" data-rjs="./images/ibizok-logos/logoibizokabajo.png" class="logo-dark" alt="Pofo" style="margin-top: 2rem; max-height: 18rem!important;">
                                 <img src="./images/ibizok-logos/logoibizokabajo.png" data-rjs="./images/ibizok-logos/logoibizokabajo.png" alt="Pofo" class="logo-light default" style="margin-top: 2rem; max-height: 18rem!important; ">
                             </a>
                         </div>
@@ -417,75 +418,111 @@
                     <div class="swiper-container black-move blog-slider swiper-four-slides swiper-pagination-bottom">
                         <div class="swiper-wrapper">
                             <!-- start team item -->
-                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 md-margin-40px-bottom wow fadeInUp 
+                            <div class="swiper-slide padding-15px-lr team-block text-left margin-10px-right team-style-1  wow fadeInUp"
                             style="
+                            margin-right: 1rem;
                                 background-image: url('./images/productos/product1.jpg'); 
-                                background-position: center center; 
-                                background-repeat: no-repeat; 
-                                background-attachment: fixed; 
-                                background-size: cover;"
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 34rem;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 24rem;
+                                "
                              >
-                            
                             </div>
-                            <!-- end team item -->
-                            <!-- start team item -->
-                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 md-margin-40px-bottom wow fadeInUp" data-wow-delay="0.2s">
-                                <figure>
-                                    <div class="team-image xs-width-100">
-                                        <img src="./images/productos/product2.jpg" alt="">
-                                    </div>
-                                  
-                                </figure>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product2.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 34rem;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 24rem;
+                                margin-right: 1rem;"
+                             >
                             </div>
-                            <!-- end team item -->
-                            <!-- start team item -->
-                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 md-margin-40px-bottom wow fadeInUp" data-wow-delay="0.4s">
-                                <figure>
-                                    <div class="team-image xs-width-100">
-                                        <img src="./images/productos/product3.jpg" alt="">
-                                    </div>
-                                </figure>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product3.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 34rem;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 24rem;
+                                margin-right: 1rem;"
+                             >
                             </div>
-                            <!-- end team item -->
-                            <!-- start team item -->
-                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 md-margin-40px-bottom wow fadeInUp" data-wow-delay="0.6s">
-                                <figure>
-                                    <div class="team-image xs-width-100">
-                                        <img src="./images/productos/product4.jpg" alt="">
-                                    </div>
-                                </figure>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product4.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 34rem;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 24rem;
+                                margin-right: 1rem;"
+                             >
                             </div>
-                            <!-- end team item -->
-                            <!-- start team item -->
-                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 md-margin-40px-bottom wow fadeInUp">
-                                <figure>
-                                    <div class="team-image xs-width-100">
-                                        <img src="./images/productos/product5.jpg" alt="">
-                                    </div>
-                                </figure>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product5.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 34rem;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 24rem;
+                                margin-right: 1rem;"
+                             >
                             </div>
-                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 md-margin-40px-bottom wow fadeInUp">
-                                <figure>
-                                    <div class="team-image xs-width-100">
-                                        <img src="./images/productos/product6.jpg" alt="">
-                                    </div>
-                                </figure>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product6.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 34rem;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 24rem;
+                                margin-right: 1rem;"
+                             >
                             </div>
-                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 md-margin-40px-bottom wow fadeInUp">
-                                <figure>
-                                    <div class="team-image xs-width-100">
-                                        <img src="./images/productos/product7.jpg" alt="">
-                                    </div>
-                                </figure>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product7.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 34rem;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 24rem;
+                                margin-right: 1rem;"
+                             >
                             </div>
-                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 md-margin-40px-bottom wow fadeInUp">
-                                <figure>
-                                    <div class="team-image xs-width-100">
-                                        <img src="./images/productos/product8.jpg" alt="">
-                                    </div>
-                                </figure>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product8.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 34rem;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 24rem;
+                                margin-right: 1rem;"
+                             >
                             </div>
-                            <!-- end team item -->                                
                         </div>                        
                         <div class="swiper-pagination swiper-pagination-four-slides"></div>
                     </div>
@@ -556,7 +593,7 @@
                     <!-- start logo -->
                     <div class="col-md-3 col-sm-3 col-xs-12 display-table sm-text-center xs-margin-20px-bottom">
                         <div class="display-table-cell vertical-align-middle">
-                            <div class="logo-footer"></div>
+                            <div style="margin-left: 1.1rem;" class="logo-footer"></div>
                             <!-- <a href="index.html">
                                 <img class="footer-logo" src="./images/ibizok-logos/ibizok-trans.png" data-rjs="./images/ibizok-logos/ibizok-trans.png" alt="Pofo">
                             </a> -->
@@ -583,8 +620,7 @@
             </div>
         </footer>
         <!-- end footer -->
-        <!-- start scroll to top -->
-        <a class="scroll-top-arrow" href="javascript:void(0);"><i class="ti-arrow-up"></i></a>
+row" href="javascript:void(0);"><i class="ti-arrow-up"></i></a>
         <!-- end scroll to top  -->
         <!-- javascript libraries -->
         <script type="text/javascript" src="js/jquery.js"></script>
