--- a/index.html
+++ b/index.html
@@ -411,63 +411,23 @@
 
             </div>
     </section>
-    <section class="wow fadeIn">
+    <section class="wow fadeIn" style="padding-bottom: 5rem;">
         <div class="container">
             <div class="row">
                 <div class="position-relative">
                     <div class="swiper-container black-move blog-slider swiper-four-slides swiper-pagination-bottom">
                         <div class="swiper-wrapper">
                             <!-- start team item -->
-                            <div class="swiper-slide padding-15px-lr team-block text-left margin-10px-right team-style-1  wow fadeInUp"
-                            style="
-                            margin-right: 1rem;
-                                background-image: url('./images/productos/product1.jpg'); 
-                                background-position: center center;
-                                background-repeat: no-repeat;
-                                background-size: cover;
-                                width: 34rem;
-                                visibility: visible;
-                                animation-name: fadeInUp;
-                                height: 24rem;
-                                "
-                             >
-                            </div>
-                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
-                            style="
-                                background-image: url('./images/productos/product2.jpg'); 
-                                background-position: center center;
-                                background-repeat: no-repeat;
-                                background-size: cover;
-                                width: 34rem;
-                                visibility: visible;
-                                animation-name: fadeInUp;
-                                height: 24rem;
-                                margin-right: 1rem;"
-                             >
-                            </div>
-                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
-                            style="
-                                background-image: url('./images/productos/product3.jpg'); 
-                                background-position: center center;
-                                background-repeat: no-repeat;
-                                background-size: cover;
-                                width: 34rem;
-                                visibility: visible;
-                                animation-name: fadeInUp;
-                                height: 24rem;
-                                margin-right: 1rem;"
-                             >
-                            </div>
                             <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
                             style="
                                 background-image: url('./images/productos/product4.jpg'); 
                                 background-position: center center;
                                 background-repeat: no-repeat;
                                 background-size: cover;
-                                width: 34rem;
                                 visibility: visible;
                                 animation-name: fadeInUp;
-                                height: 24rem;
+                                height: 41rem;
+                                width: 41rem!important;
                                 margin-right: 1rem;"
                              >
                             </div>
@@ -477,10 +437,10 @@
                                 background-position: center center;
                                 background-repeat: no-repeat;
                                 background-size: cover;
-                                width: 34rem;
+                                width: 41rem!important;
                                 visibility: visible;
                                 animation-name: fadeInUp;
-                                height: 24rem;
+                                height: 41rem;
                                 margin-right: 1rem;"
                              >
                             </div>
@@ -490,10 +450,10 @@
                                 background-position: center center;
                                 background-repeat: no-repeat;
                                 background-size: cover;
-                                width: 34rem;
+                                width: 41rem!important;
                                 visibility: visible;
                                 animation-name: fadeInUp;
-                                height: 24rem;
+                                height: 41rem;
                                 margin-right: 1rem;"
                              >
                             </div>
@@ -503,26 +463,26 @@
                                 background-position: center center;
                                 background-repeat: no-repeat;
                                 background-size: cover;
-                                width: 34rem;
+                                width: 41rem!important;
                                 visibility: visible;
                                 animation-name: fadeInUp;
-                                height: 24rem;
-                                margin-right: 1rem;"
+                                height: 41rem;
+                               "
                              >
-                            </div>
-                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
-                            style="
-                                background-image: url('./images/productos/product8.jpg'); 
-                                background-position: center center;
-                                background-repeat: no-repeat;
-                                background-size: cover;
-                                width: 34rem;
-                                visibility: visible;
-                                animation-name: fadeInUp;
-                                height: 24rem;
-                                margin-right: 1rem;"
-                             >
-                            </div>
+                             </div>
+                             <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                             style="
+                                 background-image: url('./images/productos/product1.jpg'); 
+                                 background-position: center center;
+                                 background-repeat: no-repeat;
+                                 background-size: cover;
+                                 width: 41rem!important;
+                                 visibility: visible;
+                                 animation-name: fadeInUp;
+                                 height: 41rem;
+                                "
+                              >
+                              </div>
                         </div>                        
                         <div class="swiper-pagination swiper-pagination-four-slides"></div>
                     </div>
@@ -536,7 +496,7 @@
             <div class="container-fluid padding-thirteen-lr md-padding-six-lr position-relative xs-padding-15px-lr">
                 <div class="row">
                     <div class="col-lg-6 col-md-8 col-sm-12 text-center center-col">
-                        <h4 class="text-white alt-font font-weight-300 xs-margin-5px-bottom">Contactanos</h4>
+                        <h4 class="text-white alt-font font-weight-300 xs-margin-5px-bottom">Contáctenos</h4>
                     </div>
                 </div>    
             </div>
