modifeied welcome text, about us text and added icons on services

--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
                                     class="container position-relative full-screen"
                                     style="min-height: 797px; display: flex; flex-direction: column; justify-content: center; align-items: center; padding-top: 5rem;"
                                 >
-                                    <img src="images/ibizok-logos/ibizoklogotipo_Logotipo.png" style="width: 50rem;"/>
-                                    <h4 class="text-white alt-font font-weight-300 xs-margin-5px-bottom" style="color: #354c5f;">BIENVENIDO</h4>
+                                    <img src="images/ibizok-logos/ibizokbienvenidoazul.png" style="width: 50rem;"/>
                                 </div>
                             </div>
                             <div
@@ -133,8 +132,7 @@
                                     class="container position-relative full-screen"
                                     style="min-height: 797px; display: flex; flex-direction: column; justify-content: center; align-items: center; padding-top: 5rem;"
                                 >
-                                    <img src="images/ibizok-logos/ibizoklogotipo_Logotipo.png" style="width: 50rem;"/>
-                                    <h4 class="text-white alt-font font-weight-300 xs-margin-5px-bottom" style="color: #354c5f;">BIENVENIDO</h4>
+                                    <img src="images/ibizok-logos/ibizokbienvenidoblanco.png" style="width: 50rem;"/>
                                 </div>
                             </div>
                             <div
@@ -151,8 +149,7 @@
                                     class="container position-relative full-screen"
                                     style="min-height: 797px; display: flex; flex-direction: column; justify-content: center; align-items: center; padding-top: 5rem;"
                                 >
-                                    <img src="images/ibizok-logos/ibizoklogotipo_Logotipo.png" style="width: 50rem;"/>
-                                    <h4 class="text-white alt-font font-weight-300 xs-margin-5px-bottom" style="color: #354c5f;">BIENVENIDO</h4>
+                                    <img src="images/ibizok-logos/ibizokbienvenidoblanco.png" style="width: 50rem;"></img>
                                 </div>
                             </div>
                     </div>
@@ -167,16 +164,16 @@
         <!-- start feature box section -->
         <section id="about" class="no-padding wow fadeIn" style="background-color: #626f80;">
             <div class="container-fluid no-padding">
-                <div class="row equalize no-margin" style="display: flex; flex-direction: row; flex-wrap: wrap; align-items: center;">
+                <div class="row equalize no-margin" style="display: flex; flex-direction: row; flex-wrap: wrap; align-items: center; padding-top: 5rem; padding-bottom: 5rem;">
                     <div class="col-md-6 col-sm-12 col-xs-12 position-relative sm-height-500px xs-height-350px cover-background wow fadeInLeft" style="padding: 0px; ">
                         <img src="images/ibizok-logos/ibizokhorizontal.png" />
                     </div>
-                    <div class="col-md-6 col-sm-12 col-xs-12 wow fadeInRight last-paragraph-no-margin sm-text-center" style=" overflow-y: scroll; height: 50rem; ">
+                    <div class="col-md-6 col-sm-12 col-xs-12 wow fadeInRight last-paragraph-no-margin sm-text-center">
                         <div class="display-table-cell vertical-align-middle  md-padding-ten-all sm-padding-90px-all xs-text-center xs-no-padding-lr xs-padding-40px-tb">
-                            <h5 class="alt-font text-light-gray">Somos agentes representantes, intermediarios eficientes, y generadores de oportunidades comerciales para nuestros clientes y productores.</h5>
-                            <p class="width-85 md-width-100 text-light-gray">Tenemos una estrecha relación con las principales compañías lácteas sudamericanas y europeas gracias a años de esfuerzo y constante desarrollo de nuevas oportunidades, mientras nos orientamos a servir a nuestros clientes de forma eficiente. Contamos con conocimientos y experiencia sólida a la hora de generar nuevos lazos comerciales, así como también, nos comprometemos profundamente con cada nuevo desafío.</p>
-                            <p class="text-extra-large width-85 md-width-100 text-light-gray">En IBIZOK, representamos productores europeos en el rubro lácteo para latinoamérica, lo que nos permite generar lazos comerciales entre clientes y productores de forma cercana y personalizada a las necesidades y deseos de cada parte. Asimismo, mantenemos relaciones comerciales con diferentes proveedores del rubro alimenticio, como por ejemplo en Brasil, y nos encontramos en constante desarrollo de nuevos mercados.</p>
-                            <p class="text-extra-large width-85 md-width-100 text-light-gray">Nuestros principales clientes se encuentran en México, Colombia, Guatemala, El Salvador, Costa Rica, Rep. Dominicana, Brasil, Chile, Perú, Argentina, Uruguay, entre otros, y nuestros productores en Alemania, Lituania, Países Bajos, Austria, Brasil y Paraguay.</p>
+                            <h5 class="alt-font width-85 md-width-100 text-light-gray text-justify" style="hyphens: auto;">Somos agentes representantes, intermediarios eficientes, y generadores de oportunidades comerciales para nuestros clientes y productores.</h5>
+                            <p class="width-85 md-width-100 text-light-gray text-justify" style="hyphens: auto;">Tenemos una estrecha relación con las principales compañías lácteas sudamericanas y europeas gracias a años de esfuerzo y constante desarrollo de nuevas oportunidades, mientras nos orientamos a servir a nuestros clientes de forma eficiente. Contamos con conocimientos y experiencia sólida a la hora de generar nuevos lazos comerciales, así como también, nos comprometemos profundamente con cada nuevo desafío.</p>
+                            <p class="text-extra-large width-85 md-width-100 text-justify text-light-gray" style="hyphens: auto;">En IBIZOK, representamos productores europeos en el rubro lácteo para latinoamérica, lo que nos permite generar lazos comerciales entre clientes y productores de forma cercana y personalizada a las necesidades y deseos de cada parte. Asimismo, mantenemos relaciones comerciales con diferentes proveedores del rubro alimenticio, como por ejemplo en Brasil, y nos encontramos en constante desarrollo de nuevos mercados.</p>
+                            <p class="text-extra-large width-85 md-width-100 text-justify text-light-gray" style="hyphens: auto;">Nuestros principales clientes se encuentran en México, Colombia, Guatemala, El Salvador, Costa Rica, Rep. Dominicana, Brasil, Chile, Perú, Argentina, Uruguay, entre otros, y nuestros productores en Alemania, Lituania, Países Bajos, Austria, Brasil y Paraguay.</p>
                         </div>
                     </div>
                 </div>
@@ -195,9 +192,10 @@
                     <div class="col-md-4 col-sm-4 col-xs-12 xs-margin-five-bottom last-paragraph-no-margin wow fadeInUp">
                         <div class="feature-box">
                             <div class="content">
-                                <i class="icon-global text-medium-gray icon-large margin-25px-bottom sm-margin-15px-bottom"></i>
-                                <div class="text-medium alt-font text-capitalize text-extra-dark-gray margin-10px-bottom sm-margin-5px-bottom">Conectamos, atendemos y seguimos</div>
-                                <p class="width-85 margin-lr-auto sm-width-100"><strong> Conectamos, atendemos y seguimos</strong> a todas las necesidades de nuestros clientes y productores con nuestro equipo de backoffice que se encarga de la documentación, registros y control permanente de la cadena de abastecimiento.</p>
+                                <i class="ti-world text-medium-gray icon-large margin-25px-bottom sm-margin-15px-bottom"></i>
+                                <div class="text-medium alt-font text-capitalize text-extra-dark-gray margin-10px-bottom sm-margin-5px-bottom">Conectamos</div>
+                                <p class="width-85 margin-lr-auto sm-width-100"><strong> Conectamos, atendemos y seguimos</strong> a todas las necesidades de nuestros clientes y productores con nuestro equipo de backoffice que se encarga de la documentación, registros y control permanente de la cadena de abastecimiento.
+                                </p>
                             </div>        
                         </div>
                     </div>
@@ -206,9 +204,10 @@
                     <div class="col-md-4 col-sm-4 col-xs-12 xs-margin-five-bottom last-paragraph-no-margin wow fadeInUp">
                         <div class="feature-box">
                             <div class="content">
-                                <i class="icon-lightbulb text-medium-gray icon-large margin-25px-bottom sm-margin-15px-bottom"></i>
-                                <div class="text-medium alt-font text-capitalize text-extra-dark-gray margin-10px-bottom sm-margin-5px-bottom">Brindando Soluciones</div>
-                                <p class="width-85 margin-lr-auto sm-width-100"> Contamos con sólidos conocimientos y experiencia para crear nuevos negocios y desarrollar nuevos mercados,<strong> brindando soluciones </strong>para clientes y productores.
+                                <i class="ti-light-bulb text-medium-gray icon-large margin-25px-bottom sm-margin-15px-bottom"></i>
+                                <div class="text-medium alt-font text-capitalize text-extra-dark-gray margin-10px-bottom sm-margin-5px-bottom">Brindamos Soluciones</div>
+                                <p class="width-85 margin-lr-auto sm-width-100"> Contamos con sólidos conocimientos y experiencia para crear nuevos negocios y desarrollar nuevos mercados, lo que nos permite<strong> brindar soluciones </strong>a clientes y productores.
+
                                 </p>
                             </div>
                         </div>
@@ -218,7 +217,7 @@
                     <div class="col-md-4 col-sm-4 col-xs-12 xs-margin-five-bottom last-paragraph-no-margin wow fadeInUp">
                         <div class="feature-box">
                             <div class="content">
-                                <i class="icon-global text-medium-gray icon-large margin-25px-bottom sm-margin-15px-bottom"></i>
+                                <i class="ti-package text-medium-gray icon-large margin-25px-bottom sm-margin-15px-bottom"></i>
                                 <div class="text-medium alt-font text-capitalize text-extra-dark-gray margin-10px-bottom sm-margin-5px-bottom">Abastecemos</div>
                                 <p class="width-85 margin-lr-auto sm-width-100"><strong>Abastecemos</strong> a nuestros clientes manejando los riesgos de la cadena de abastecimiento así como también, generamos nuevas oportunidades de negocio para nuestros productores a lo largo de todo latinoamérica.</p>
                             </div>   
@@ -415,6 +414,19 @@
                             </div>
                             <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
                             style="
+                                background-image: url('./images/productos/product3.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 41rem!important;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 41rem;
+                                margin-right: 1rem;"
+                             >
+                            </div>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
                                 background-image: url('./images/productos/product6.jpg'); 
                                 background-position: center center;
                                 background-repeat: no-repeat;
@@ -500,7 +512,7 @@
                     </div>
                     <!-- end contact item -->
                     <div class="col-md-3 col-sm-6 col-xs-12 text-center sm-margin-30px-bottom wow fadeInUp last-paragraph-no-margin" data-wow-delay="0.2s">
-                        <i class="icon-chat icon-medium margin-25px-bottom sm-margin-15px-bottom"></i>
+                        <i class="icon-phone icon-medium margin-25px-bottom sm-margin-15px-bottom"></i>
                         <div class="text-extra-dark-gray text-uppercase text-small font-weight-600 alt-font margin-5px-bottom">Contáctenos</div>
                         <p class="center-col">+598 2902 8004 Ext. 5131</p>
                     </div>
@@ -518,7 +530,7 @@
         <!-- start footer --> 
         <footer class="footer-strip-dark bg-black padding-50px-tb xs-padding-30px-tb" style="background-color: white;">
             <div class="container">
-                <div class="row equalize xs-equalize-auto" style="display: flex; flex-direction: row; align-items: baseline;">
+                <div class="row equalize xs-equalize-auto" style="display: flex; flex-direction: row; align-items: baseline; flex-wrap: wrap;">
                     <!-- start logo -->
                     <div class="col-md-3 col-sm-3 col-xs-12 display-table sm-text-center xs-margin-20px-bottom">
                         <div class="display-table-cell vertical-align-middle">
