added english and header bg

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <div class="row" style="height: 10rem!important;">
                         <div class="col-md-2 col-xs-5">
                             <a href="index.html" title="" class="logo">
-                                <img src="./images/ibizok-logos/logoibizokabajo.png" data-rjs="./images/ibizok-logos/logoibizokabajo.png" class="logo-dark" alt="Pofo" style="margin-top: 2rem; max-height: 18rem!important;">
-                                <img src="./images/ibizok-logos/logoibizokabajo.png" data-rjs="./images/ibizok-logos/logoibizokabajo.png" alt="Pofo" class="logo-light default" style="margin-top: 2rem; max-height: 18rem!important; ">
+                                <img src="./images/ibizok-logos/ibizokhorizontalblanco.png" data-rjs="./images/ibizok-logos/ibizokhorizontalblanco.png" class="logo-dark default" alt="Pofo" style="margin-top: 2rem; max-height: 18rem!important;">
+                                <img src="./images/ibizok-logos/logoibizokabajo.png" data-rjs="./images/ibizok-logos/logoibizokabajo.png" alt="Pofo" class="logo-light " style="margin-top: 2rem; max-height: 18rem!important; ">
                             </a>
                         </div>
                         <div class="col-md-7 col-xs-2 width-auto pull-right accordion-menu xs-no-padding-right">
@@ -170,10 +170,10 @@
                     </div>
                     <div class="col-md-6 col-sm-12 col-xs-12 wow fadeInRight last-paragraph-no-margin sm-text-center">
                         <div class="display-table-cell vertical-align-middle  md-padding-ten-all sm-padding-90px-all xs-text-center xs-no-padding-lr xs-padding-40px-tb">
-                            <h5 class="alt-font width-85 md-width-100 text-light-gray text-justify" style="hyphens: auto;">Somos agentes representantes, intermediarios eficientes, y generadores de oportunidades comerciales para nuestros clientes y productores.</h5>
-                            <p class="width-85 md-width-100 text-light-gray text-justify" style="hyphens: auto;">Tenemos una estrecha relación con las principales compañías lácteas sudamericanas y europeas gracias a años de esfuerzo y constante desarrollo de nuevas oportunidades, mientras nos orientamos a servir a nuestros clientes de forma eficiente. Contamos con conocimientos y experiencia sólida a la hora de generar nuevos lazos comerciales, así como también, nos comprometemos profundamente con cada nuevo desafío.</p>
-                            <p class="text-extra-large width-85 md-width-100 text-justify text-light-gray" style="hyphens: auto;">En IBIZOK, representamos productores europeos en el rubro lácteo para latinoamérica, lo que nos permite generar lazos comerciales entre clientes y productores de forma cercana y personalizada a las necesidades y deseos de cada parte. Asimismo, mantenemos relaciones comerciales con diferentes proveedores del rubro alimenticio, como por ejemplo en Brasil, y nos encontramos en constante desarrollo de nuevos mercados.</p>
-                            <p class="text-extra-large width-85 md-width-100 text-justify text-light-gray" style="hyphens: auto;">Nuestros principales clientes se encuentran en México, Colombia, Guatemala, El Salvador, Costa Rica, Rep. Dominicana, Brasil, Chile, Perú, Argentina, Uruguay, entre otros, y nuestros productores en Alemania, Lituania, Países Bajos, Austria, Brasil y Paraguay.</p>
+                            <h5 class="alt-font width-85 md-width-100 text-light-gray text-center">Somos agentes representantes, intermediarios eficientes, y generadores de oportunidades comerciales para nuestros clientes y productores.</h5>
+                            <p class="width-85 md-width-100 text-light-gray text-justify">Tenemos una estrecha relación con las principales compañías lácteas sudamericanas y europeas gracias a años de esfuerzo y constante desarrollo de nuevas oportunidades, mientras nos orientamos a servir a nuestros clientes de forma eficiente. Contamos con conocimientos y experiencia sólida a la hora de generar nuevos lazos comerciales, así como también, nos comprometemos profundamente con cada nuevo desafío.</p>
+                            <p class="text-extra-large width-85 md-width-100 text-justify text-light-gray">En IBIZOK, representamos productores europeos en el rubro lácteo para latinoamérica, lo que nos permite generar lazos comerciales entre clientes y productores de forma cercana y personalizada a las necesidades y deseos de cada parte. Asimismo, mantenemos relaciones comerciales con diferentes proveedores del rubro alimenticio, como por ejemplo en Brasil, y nos encontramos en constante desarrollo de nuevos mercados.</p>
+                            <p class="text-extra-large width-85 md-width-100 text-justify text-light-gray">Nuestros principales clientes se encuentran en México, Colombia, Guatemala, El Salvador, Costa Rica, Rep. Dominicana, Brasil, Chile, Perú, Argentina, Uruguay, entre otros, y nuestros productores en Alemania, Lituania, Países Bajos, Austria, Brasil y Paraguay.</p>
                         </div>
                     </div>
                 </div>
@@ -294,7 +294,7 @@
                                             Manteca
                                         </li>
                                         <li style="text-align: initial; margin-left: 2.5rem;">
-                                            Yogures bebibles
+                                            Yogurt bebible
                                         </li>
                                     </ul>
                                     <ul style="text-align: justify;">
@@ -368,7 +368,7 @@
                                     <span class="text-extra-dark-gray text-uppercase alt-font text-extra-large font-weight-600 margin-15px-bottom display-block">Quesos análogos</span>
                                     <ul style="text-align: justify;">
                                         <li style="text-align: initial; margin-left: 2.5rem;">Queso Gouda análogo</li>
-                                        <li style="text-align: initial; margin-left: 2.5rem;">Queso mozzarella análogo</li>
+                                        <li style="text-align: initial; margin-left: 2.5rem;">Queso Mozzarella análogo</li>
                                     </ul>
                                 </div>        
                             </div>
