--- a/en.html
+++ b/en.html
@@ -54,7 +54,7 @@
         <header>
             <!-- start navigation -->
             <nav class="navbar navbar-default bootsnav navbar-fixed-top header-dark white-link bg-transparent">
-                <div class="container-fluid padding-thirteen-lr md-padding-eight-lr sm-padding-15px-lr nav-header-container">
+                <div class="container-fluid padding-thirteen-lr md-padding-eight-lr sm-padding-15px-lr nav-header-container" style="padding-right:  6%!important;">
                     <div class="row" style="height: 10rem!important;">
                         <div class="col-md-2 col-xs-5">
                             <a href="index.html" title="" class="logo">
@@ -83,6 +83,8 @@
                                     </li>
                                     <li><a href="#products" title="Products" class="inner-link">Products</a>   </li>
                                     <li><a href="#contact" title="Contact" class="inner-link">Contact</a>   </li>
+                                    <li><a href="index.html" title="Español" class="inner-link"><img src='./images/spain-flag-icon-32.png' /></a>   </li>
+                                    <li><a href="en.html" title="English" class="inner-link"><img src='./images/united-states-of-america-flag-icon-32.png' /></a>   </li>
                                     </div>
                                 </form>
                             </div>
@@ -383,7 +385,98 @@
 
             </div>
     </section>
-
+    <section class="wow fadeIn" style="padding-bottom: 2rem;">
+        <div class="container">
+            <div class="row">
+                <div class="position-relative">
+                    <div class="swiper-container black-move blog-slider swiper-four-slides swiper-pagination-bottom">
+                        <div class="swiper-wrapper">
+                            <!-- start team item -->
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product4.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 41rem;
+                                width: 41rem!important;
+                                margin-right: 1rem;"
+                             >
+                            </div>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product9.jpeg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 41rem!important;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 41rem;
+                                margin-right: 1rem;"
+                             >
+                            </div>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product3.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 41rem!important;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 41rem;
+                                margin-right: 1rem;"
+                             >
+                            </div>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product6.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 41rem!important;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 41rem;
+                                margin-right: 1rem;"
+                             >
+                            </div>
+                            <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                            style="
+                                background-image: url('./images/productos/product7.jpg'); 
+                                background-position: center center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                width: 41rem!important;
+                                visibility: visible;
+                                animation-name: fadeInUp;
+                                height: 41rem;
+                               "
+                             >
+                             </div>
+                             <div class="swiper-slide padding-15px-lr team-block text-left team-style-1 margin-10px-right wow fadeInUp"
+                             style="
+                                 background-image: url('./images/productos/product1.jpg'); 
+                                 background-position: center center;
+                                 background-repeat: no-repeat;
+                                 background-size: cover;
+                                 width: 41rem!important;
+                                 visibility: visible;
+                                 animation-name: fadeInUp;
+                                 height: 41rem;
+                                "
+                              >
+                              </div>
+                        </div>                        
+                        <div class="swiper-pagination swiper-pagination-four-slides"></div>
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </section>
     <!-- start form style 03 section -->
     <section id="contact" class="wow fadeIn bg-light-gray" style="background-color: #626f80;">
             <div class="opacity-extra-medium bg-black"></div>
@@ -395,7 +488,7 @@
                 </div>    
             </div>
         <div class="container">
-            <form id="contact-form-3" action="javascript:void(0)" method="post">
+            <form id="contact-form-3" action="https://formspree.io/info@ibizoksa.com" method="post">
                 <div class="row"> 
                     <div class="col-md-6 wow fadeIn center-col">
                         <div class="padding-fifteen-all bg-white border-radius-6 md-padding-seven-all">
@@ -457,7 +550,7 @@
                     <!-- start copyright -->
                     <div class="col-md-6 col-sm-6 col-xs-12 text-center text-small alt-font display-table xs-margin-10px-bottom">
                         <div class="display-table-cell vertical-align-middle">
-                            &copy; 2020 Ibizok is Proudly Powered by Lograf</a>.
+                            &copy; 2020 Ibizok is Proudly Powered by <a href="https://lografdesign.com"  target="_blank"  title="Products" class="inner-link">Lograf</a>.
                         </div>
                     </div>
                     <!-- end copyright -->
