added new images

--- a/index.html
+++ b/index.html
@@ -140,7 +140,75 @@
                             <div
                             class="swiper-slide cover-background bg-image-srcset swiper-slide-active"
                             style="
-                              background-image: url('./images/portada/portada4.jpg');
+                              background-image: url('./images/portada/portada6.jpg');
+                              width: 1440px;
+                            "
+                            data-bg-srcset="./images/portada/portada4.jpg 1920w, ./images/portada/portada4.jpg 350w, ./images/portada/portada4.jpg 600w, ./images/portada/portada4.jpg 300w, ./images/portada/portada4.jpg 768w, ./images/portada/portada4.jpg 1024w, ./images/portada/portada4.jpg 1200w, ./images/portada/portada4.jpg 81w"
+                            data-swiper-slide-index="0"
+                          >  
+                                <div class="bg-black bg-overlay" style="opacity: 0.5;"></div>
+                                <div
+                                    class="container position-relative full-screen"
+                                    style="min-height: 797px; display: flex; flex-direction: column; justify-content: center; align-items: center; padding-top: 5rem;"
+                                >
+                                    <img src="images/ibizok-logos/ibizokbienvenidoblanco.png" style="width: 50rem;"></img>
+                                </div>
+                            </div>
+                            <div
+                            class="swiper-slide cover-background bg-image-srcset swiper-slide-active"
+                            style="
+                              background-image: url('./images/portada/portada7.jpg');
+                              width: 1440px;
+                            "
+                            data-bg-srcset="./images/portada/portada4.jpg 1920w, ./images/portada/portada4.jpg 350w, ./images/portada/portada4.jpg 600w, ./images/portada/portada4.jpg 300w, ./images/portada/portada4.jpg 768w, ./images/portada/portada4.jpg 1024w, ./images/portada/portada4.jpg 1200w, ./images/portada/portada4.jpg 81w"
+                            data-swiper-slide-index="0"
+                          >  
+                                <div class="bg-black bg-overlay" style="opacity: 0.5;"></div>
+                                <div
+                                    class="container position-relative full-screen"
+                                    style="min-height: 797px; display: flex; flex-direction: column; justify-content: center; align-items: center; padding-top: 5rem;"
+                                >
+                                    <img src="images/ibizok-logos/ibizokbienvenidoblanco.png" style="width: 50rem;"></img>
+                                </div>
+                            </div>
+                            <div
+                            class="swiper-slide cover-background bg-image-srcset swiper-slide-active"
+                            style="
+                              background-image: url('./images/portada/portada8.jpg');
+                              width: 1440px;
+                            "
+                            data-bg-srcset="./images/portada/portada4.jpg 1920w, ./images/portada/portada4.jpg 350w, ./images/portada/portada4.jpg 600w, ./images/portada/portada4.jpg 300w, ./images/portada/portada4.jpg 768w, ./images/portada/portada4.jpg 1024w, ./images/portada/portada4.jpg 1200w, ./images/portada/portada4.jpg 81w"
+                            data-swiper-slide-index="0"
+                          >  
+                                <div class="bg-black bg-overlay" style="opacity: 0.5;"></div>
+                                <div
+                                    class="container position-relative full-screen"
+                                    style="min-height: 797px; display: flex; flex-direction: column; justify-content: center; align-items: center; padding-top: 5rem;"
+                                >
+                                    <img src="images/ibizok-logos/ibizokbienvenidoblanco.png" style="width: 50rem;"></img>
+                                </div>
+                            </div>
+                            <div
+                            class="swiper-slide cover-background bg-image-srcset swiper-slide-active"
+                            style="
+                              background-image: url('./images/portada/portada9.jpg');
+                              width: 1440px;
+                            "
+                            data-bg-srcset="./images/portada/portada4.jpg 1920w, ./images/portada/portada4.jpg 350w, ./images/portada/portada4.jpg 600w, ./images/portada/portada4.jpg 300w, ./images/portada/portada4.jpg 768w, ./images/portada/portada4.jpg 1024w, ./images/portada/portada4.jpg 1200w, ./images/portada/portada4.jpg 81w"
+                            data-swiper-slide-index="0"
+                          >  
+                                <div class="bg-black bg-overlay" style="opacity: 0.5;"></div>
+                                <div
+                                    class="container position-relative full-screen"
+                                    style="min-height: 797px; display: flex; flex-direction: column; justify-content: center; align-items: center; padding-top: 5rem;"
+                                >
+                                    <img src="images/ibizok-logos/ibizokbienvenidoblanco.png" style="width: 50rem;"></img>
+                                </div>
+                            </div>
+                            <div
+                            class="swiper-slide cover-background bg-image-srcset swiper-slide-active"
+                            style="
+                              background-image: url('./images/portada/portada10.jpg');
                               width: 1440px;
                             "
                             data-bg-srcset="./images/portada/portada4.jpg 1920w, ./images/portada/portada4.jpg 350w, ./images/portada/portada4.jpg 600w, ./images/portada/portada4.jpg 300w, ./images/portada/portada4.jpg 768w, ./images/portada/portada4.jpg 1024w, ./images/portada/portada4.jpg 1200w, ./images/portada/portada4.jpg 81w"
