added linkidin and text latinomaerica

--- a/en.html
+++ b/en.html
@@ -140,7 +140,7 @@
                             <div
                             class="swiper-slide cover-background bg-image-srcset swiper-slide-active"
                             style="
-                              background-image: url('./images/portada/portada4.jpg');
+                              background-image: url('./images/portada/portada9.jpg');
                               width: 1440px;
                             "
                             data-bg-srcset="./images/portada/portada4.jpg 1920w, ./images/portada/portada4.jpg 350w, ./images/portada/portada4.jpg 600w, ./images/portada/portada4.jpg 300w, ./images/portada/portada4.jpg 768w, ./images/portada/portada4.jpg 1024w, ./images/portada/portada4.jpg 1200w, ./images/portada/portada4.jpg 81w"
@@ -558,7 +558,9 @@
                     <div class="col-md-3 col-sm-3 col-xs-12 display-table text-right sm-text-center">
                         <div class="display-table-cell vertical-align-middle">
                             <div class="social-icon-style-8 display-inline-block vertical-align-middle">
-                                
+                                <ul class="small-icon no-margin-bottom">
+                                    <li><a class="linkedin text-black" href="https://www.linkedin.com/company/ibizok" target="_blank"><i class="fab fa-linkedin no-margin-right" aria-hidden="true"></i></a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
