--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <div class="feature-box">
                             <div class="content">
                                 <i class="ti-world text-medium-gray icon-large margin-25px-bottom sm-margin-15px-bottom"></i>
-                                <div class="text-medium alt-font text-capitalize text-extra-dark-gray margin-10px-bottom sm-margin-5px-bottom">Conectamos</div>
+                                <div class="text-medium alt-font text-uppercase text-extra-dark-gray margin-10px-bottom sm-margin-5px-bottom">Conectamos</div>
                                 <p class="width-85 margin-lr-auto sm-width-100"><strong> Conectamos, atendemos y seguimos</strong> a todas las necesidades de nuestros clientes y productores con nuestro equipo de backoffice que se encarga de la documentación, registros y control permanente de la cadena de abastecimiento.
                                 </p>
                             </div>        
@@ -209,7 +209,7 @@
                         <div class="feature-box">
                             <div class="content">
                                 <i class="ti-light-bulb text-medium-gray icon-large margin-25px-bottom sm-margin-15px-bottom"></i>
-                                <div class="text-medium alt-font text-capitalize text-extra-dark-gray margin-10px-bottom sm-margin-5px-bottom">Brindamos Soluciones</div>
+                                <div class="text-medium alt-font text-uppercase text-extra-dark-gray margin-10px-bottom sm-margin-5px-bottom">Brindamos Soluciones</div>
                                 <p class="width-85 margin-lr-auto sm-width-100"> Contamos con sólidos conocimientos y experiencia para crear nuevos negocios y desarrollar nuevos mercados, lo que nos permite<strong> brindar soluciones </strong>a clientes y productores.
 
                                 </p>
@@ -222,7 +222,7 @@
                         <div class="feature-box">
                             <div class="content">
                                 <i class="ti-package text-medium-gray icon-large margin-25px-bottom sm-margin-15px-bottom"></i>
-                                <div class="text-medium alt-font text-capitalize text-extra-dark-gray margin-10px-bottom sm-margin-5px-bottom">Abastecemos</div>
+                                <div class="text-medium alt-font text-uppercase text-extra-dark-gray margin-10px-bottom sm-margin-5px-bottom">Abastecemos</div>
                                 <p class="width-85 margin-lr-auto sm-width-100"><strong>Abastecemos</strong> a nuestros clientes manejando los riesgos de la cadena de abastecimiento así como también, generamos nuevas oportunidades de negocio para nuestros productores a lo largo de Latinoamérica.</p>
                             </div>   
                         </div>
@@ -556,7 +556,7 @@
                     <div class="col-md-3 col-sm-3 col-xs-12 display-table text-right sm-text-center">
                         <div class="display-table-cell vertical-align-middle">
                             <div class="social-icon-style-8 display-inline-block vertical-align-middle">
-                                <ul class="small-icon no-margin-bottom">
+                                <ul class="large-icon no-margin-bottom">
                                     <li><a class="linkedin text-black" href="https://www.linkedin.com/company/ibizok" target="_blank"><i class="fab fa-linkedin no-margin-right" aria-hidden="true"></i></a></li>
                                 </ul>
                             </div>
