--- a/en.html
+++ b/en.html
@@ -558,7 +558,7 @@
                     <div class="col-md-3 col-sm-3 col-xs-12 display-table text-right sm-text-center">
                         <div class="display-table-cell vertical-align-middle">
                             <div class="social-icon-style-8 display-inline-block vertical-align-middle">
-                                <ul class="small-icon no-margin-bottom">
+                                <ul class="large-icon no-margin-bottom">
                                     <li><a class="linkedin text-black" href="https://www.linkedin.com/company/ibizok" target="_blank"><i class="fab fa-linkedin no-margin-right" aria-hidden="true"></i></a></li>
                                 </ul>
                             </div>
