--- a/en.html
+++ b/en.html
@@ -520,7 +520,8 @@
                     <div class="col-md-3 col-sm-6 col-xs-12 text-center sm-margin-30px-bottom wow fadeInUp last-paragraph-no-margin" data-wow-delay="0.2s">
                         <i class="icon-phone icon-medium margin-25px-bottom sm-margin-15px-bottom"></i>
                         <div class="text-extra-dark-gray text-uppercase text-small font-weight-600 alt-font margin-5px-bottom">Call Us</div>
-                        <p class="center-col">+598 98 650 457 Ext. 5131</p>
+                        <p class="center-col">Tel. +598 2902 8004 Ext. 5131 <br />
+                            Mob. +598 98 650 457</p>
                     </div>
                     <!-- start contact item -->
                     <div class="col-md-3 col-sm-6 col-xs-12 text-center xs-margin-30px-bottom wow fadeInUp last-paragraph-no-margin" data-wow-delay="0.4s">
