--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                 </div>    
             </div>
         <div class="container">
-            <form id="contact-form-3" action="https://formspree.io/sofia@ibizoksa.com" method="post">
+            <form id="contact-form-3" action="https://formspree.io/javier@ibizoksa.com" method="post">
                 <div class="row"> 
                     <div class="col-md-6 wow fadeIn center-col">
                         <div class="padding-fifteen-all bg-white border-radius-6 md-padding-seven-all">
