--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                     <li><a href="#about" title="Sobre Nosotros" class="inner-link">Sobre Nosotros</a>
                                     </li>
                                     <li>
-                                        <a href="#services" title="Servicos" class="inner-link">Servicos</a>
+                                        <a href="#services" title="Servicos" class="inner-link">Servicios</a>
                                     </li>
                                     <li><a href="#products" title="Productos" class="inner-link">Productos</a>   </li>
                                     <li><a href="#contact" title="Contacto" class="inner-link">Contacto</a>   </li>
